--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -24,8 +26,8 @@
                 <span class="fw-bold">GMTWEB</span>
             </a>
             
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" >
+               <i class='bx bx-menu'></i>
             </button>
             
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -420,7 +422,7 @@
             </div>
         </div>
     </footer>
-
+   <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- AOS Animation Library -->
